--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<link href='https://unpkg.com/boxicons@2.0.9/css/boxicons.min.css' rel='stylesheet'>
 	<link rel="stylesheet" href="style.css">
 	<script src="main.js" async></script>
-	<script src="app.js" defer type="module"></script>
+	
 	<title>AdminSite</title>
 </head>
 <body>
@@ -14,28 +14,14 @@
 	<section id="sidebar">
 		<a href="#" class="brand"><i class='bx bxs-smile icon'></i> AdminSite</a>
 		<ul class="side-menu">
-			<li><a href="#" class="active"><i class='bx bxs-dashboard icon' ></i> Dashboard</a></li>
+			<li onclick="Dashboard()"><a href="#" class="active"><i class='bx bxs-dashboard icon' ></i> Dashboard</a></li>
 			<li class="divider" data-text="main">Main</li>
 			<li>
-				<a href="#"><i class='bx bxs-inbox icon' ></i> Elements <i class='bx bx-chevron-right icon-right' ></i></a>
+				<a href="#"><i class='bx bxs-inbox icon' ></i> Filtrados <i class='bx bx-chevron-right icon-right' ></i></a>
 				<ul class="side-dropdown">
-					<li><a href="#">Alert</a></li>
-					<li><a href="#">Badges</a></li>
-					<li><a href="#">Breadcrumbs</a></li>
-					<li><a href="#">Button</a></li>
-				</ul>
-			</li>
-			<li><a href="#"><i class='bx bxs-chart icon' ></i> Charts</a></li>
-			<li><a href="#"><i class='bx bxs-widget icon' ></i> Widgets</a></li>
-			<li class="divider" data-text="table and forms">Table and forms</li>
-			<li><a href="#"><i class='bx bx-table icon' ></i> Tables</a></li>
-			<li>
-				<a href="#"><i class='bx bxs-notepad icon' ></i> Forms <i class='bx bx-chevron-right icon-right' ></i></a>
-				<ul class="side-dropdown">
-					<li><a href="#">Basic</a></li>
-					<li><a href="#">Select</a></li>
-					<li><a href="#">Checkbox</a></li>
-					<li><a href="#">Radio</a></li>
+					<li onclick="año()"><a href="#">Año</a></li>
+					<li onclick="actor()"><a href="#">Actor</a></li>
+					<li onclick="imdb()"><a href="#">IMDB</a></li>
 				</ul>
 			</li>
 		</ul>
@@ -64,24 +50,12 @@
 		<!-- NAVBAR -->
 
 		<!-- MAIN -->
-		<main>
-			<h1 class="title">Dashboard</h1>
-			<ul class="breadcrumbs">
-				<li><a href="#">Home</a></li>
-				<li class="divider">/</li>
-				<li><a href="#" class="active">Dashboard</a></li>
-			</ul>
-            <div id="buscador">
-                <input class="form-control me-2" type="text" id="enterId" placeholder="Search" aria-label="Search">
-                <button id="id" onclick="search_Id()" class="btn btn-outline-success" type="submit">Search</button>
-            </div>
-            
-			<div class="info-data">
-				
-			</div>
+		<main id="main">
+
 		</main>
 		<!-- MAIN -->
 	</section>
 	<!-- NAVBAR -->
 </body>
+<script src="app.js"></script>
 </html>
